# ray-tracer

./: .gitignore  CHANGELOG.md  README.md  deps.edn
clojure/: Makefile
clojure/doc/: notes.org
doc/: intro.md
haskell/: .gitignore  .hlint.yaml  ChangeLog.md  Makefile  README.md  canvasClock.ppm  package.yaml  ray-tracer-exe-dropAt-silhouette.prof  ray-tracer-exe-matrix-list.prof  ray-tracer-exe-naive-canvas.prof  ray-tracer-exe-pre-add-first.prof  ray-tracer-exe.prof  ray-tracer.cabal
haskell/app/: Main.hs
haskell/demos/: canvas.ppm  canvasSceneNestedGlass.ppm  teapot-low.ppm  teddy.ppm
haskell/profiling/: ray-tracer-exe-fromColors-silhouette.prof  ray-tracer-exe-naive-silhouette.prof  ray-tracer-exe-pre-text.prof  ray-tracer-exe-scene.prof  ray-tracer-exe-with-group.prof  ray-tracer-exe-with-out-group.prof  ray-tracer-exe-with-text.prof
haskell/src/: Camera.hs  Canvas.hs  Clock.hs  Computation.hs  Intersection.hs  Intersections.hs  Lib.hs  Lights.hs  Materials.hs  Matrices.hs  ObjFileParser.hs  PPMCanvas.hs  Patterns.hs  Planes.hs  Projectile.hs  Rays.hs  Scene.hs  Shapes.hs  (+20 more)
resources/: README.md
rust/: Cargo.toml  README.md
rust/benches/: matrices.rs  raymark.rs  rendering.rs  rendering_iai.rs  transformations.rs  vectors.rs
rust/demos/ppms/: chapter15.ppm  glass_with_air.ppm  simple_pattern_scene.ppm
rust/src/: bounds.rs  camera.rs  canvas.rs  color.rs  context.rs  intersections.rs  lib.rs  lights.rs  materials.rs  matrices.rs  obj_file_parser.rs  rays.rs  shape.rs  spheres.rs  transformations.rs  utils.rs  vector.rs  vector_simd.rs  world.rs
(+33 files in other folders)
