[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# only used to bench and test against
glam = "0.22.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "raymark"
harness = false

[[bench]]
name = "matrices"
harness = false

[profile.release]
debug = true
