[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# only used to bench and test against
glam = "0.22.0"
rayon = "1.6"

[dev-dependencies]
criterion = "0.3"
iai = "0.1"

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "rendering_iai"
harness = false

[[bench]]
name = "raymark"
harness = false

[[bench]]
name = "matrices"
harness = false

[[bench]]
name = "transformations"
harness = false

[profile.release]
debug = true
